fixed 1px lane on iphone

--- a/Server/public/cube.css
+++ b/Server/public/cube.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 body {
     user-select: none;
@@ -21,5 +21,13 @@ body {
     width: 100%;
     height: 20px;
     z-index: 1; 
-    /* pointer-events: none; */
+  }
+
+  .overlay2 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    z-index: 1; 
   }
